Uses Packr to create an APP file for Mac OS X 10.6 and later: http://sourceforge.net/p/tuer/tickets/9/